# secure-rules-files

./: .gitignore  assistants.json  generate_rules.py  pyproject.toml  technologies.json
python/any/: copilot-instructions.md
terraform/any/: copilot-instructions.md
