[project]
name = "secure-rules-files"
version = "0.1.0"
description = ""
authors = [
    {name = "Sascha Corti",email = "sascha@corti.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.99.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
